--- a/index.html
+++ b/index.html
@@ -1,4 +1,50 @@
 <!DOCTYPE html>
+<!--This is a test file. -->
 <html>
-<h1>Hello World!</h1>
+  <body>
+    <div>
+    <h1>Hello World!</h1>
+      <h2>Heading2</h2>
+        <h3>Heading3</h3>
+          <h4>Heading4</h4>
+            <h5>Heading5</h5>
+              <h6>Heading6</h6>
+              <p>This is a paragraph.<br>
+                  This is another line.
+                  <strong>Strong sentences</strong><br>
+                  Some <b>bold</b> texts.<br>
+                  And some <i>italics</i><br>
+                  And there is also something to <em>emphasize</em><br>
+                  Add a list:
+                  <ul>
+                     <li>Tea</li>
+                     <li>Sugar</li>
+                     <li>Milk</li>
+                  </ul>
+                  Following is a table.<br>
+              </p>
+              <table>Table</table>
+              <tr>
+                <th>Value1</th>
+                <th>1.0</th>
+                <td>Value2</td>
+                <td>2.0</td>
+              </tr>
+              <tr>
+                <td>Value3</td>
+                <td>3.0</td>
+              </tr>
+              <a href="yuxuani.github.io">My Website</a>
+              <img src="https://www.pexels.com/photo/silhouette-photo-of-clouds-during-golden-hour-2600964/" width=”480”, height=”240”>
+    </div>
+    <div>
+      <p>Add a Form.</p><br>
+      <form action="registration" method="POST">
+        <label for="username=">Username</label><br>
+        <input type="text", name="username"/>
+      </form>
+      </form>
+      <input name="username">Name</input>
+    </div>
+  </body>
 </html>
