--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <td>Value3</td>
                 <td>3.0</td>
               </tr>
-              <a href="yuxuani.github.io">My Website</a>
+              <a href="https://yuxuani.github.io">My Website</a>
               <img src="https://www.pexels.com/photo/silhouette-photo-of-clouds-during-golden-hour-2600964/" width=”480”, height=”240”>
     </div>
     <div>
